fixed some alignment issues

--- a/src/components/newPost/newPost.css
+++ b/src/components/newPost/newPost.css
@@ -44,6 +44,7 @@
     height: auto;
     max-width: 100%;
     width: 28rem;
+    min-width: 350px;
     margin-bottom: 0.5rem;
     object-fit: scale-down;
 }
